# github-insight-radar

./: .env.example  .gitignore  AGENTS.md  README.md  plan_prompt.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily_github_insight.yml
config/: audiences.yml  evergreen_repos.yml  image_policy.yml  queries.yml  scoring.yml
dashboard/: app.py  index.html
data/history/: seen_repos.json
data/processed/: 2026-07-02-github-insight-projects.csv  2026-07-02-github-insight-projects.json  2026-07-03-github-insight-projects.csv  2026-07-03-github-insight-projects.json  2026-07-04-github-insight-projects.csv  2026-07-04-github-insight-projects.json  2026-07-05-github-insight-projects.csv  2026-07-05-github-insight-projects.json  2026-07-06-github-insight-projects.csv  2026-07-06-github-insight-projects.json  2026-07-07-github-insight-projects.csv  (+30 more)
docs/: data-dictionary.md  deployment-guide.md  index.html  portfolio-notes.md  scoring-methodology.md
github_insight/: __init__.py  classifier.py  cli.py  collectors.py  config.py  dashboard.py  dashboard_builder.py  evergreen.py  fetcher.py  github_client.py  image_generator.py  logging_utils.py  models.py  quality.py  readme_analyzer.py  report_writer.py  reports.py  scoring.py  storage.py  utils.py  validation.py
scripts/: __init__.py  github_insight.py  run_tests.ps1
tests/: test_classifier.py  test_cli_mock_run.py  test_dashboard_builder.py  test_evergreen.py  test_image_generator.py  test_pipeline_smoke.py  test_quality.py  test_report_writer.py  test_scoring.py  test_storage.py
(+175 files in other folders)
